# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: constants.h  game_logic.h  input.h  rendering.h
src/: constants.c  game_logic.c  input.c  main.c  rendering.c
test/: game_logic_test.cpp
